DDP-6856: Add Spanish version of "Guide for Sharing Your Health Information"

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -565,7 +565,7 @@
                 {
                     "question": "What medical records are needed?",
                     "answers": [
-                        "We require medical records from the affected family member(s). For more information about the types of records that are needed, please see our <a href=\"sharing-guide.pdf\" target=\"_blank\" class=\"Link\">Guide to Sharing Health Information</a>."
+                        "We require medical records from the affected family member(s). For more information about the types of records that are needed, please see our <a href=\"sharing-guide-en.pdf\" target=\"_blank\" class=\"Link\">Guide to Sharing Health Information</a>."
                     ]
                 },
                 {
