DDP-6816 fix comments

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -503,7 +503,7 @@
             "ShowPanel": "Show",
             "HidePanel": "Hide",
             "UserLabel": "You",
-            "ChildLabel": "Your child"
+            "ChildLabel": "Your child{{suffix}}"
         },
         "Password": {
             "Title": "Please enter the password",
