--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -501,7 +501,7 @@
             "ShowPanel": "Mostrar",
             "HidePanel": "Esconder",
             "UserLabel": "Usted",
-            "ChildLabel": "Su hijo(a)"
+            "ChildLabel": "Su hijo(a){{suffix}}"
         },
         "Password": {
             "Title": "Ingrese la contraseña.",
