--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -208,10 +208,10 @@
                         {
                             "Title": "Leadership",
                             "List": [
-                                "<b>Elana Anastasio</b><br/>Associate Director",
-                                "<b>Roeshana Moore-Evans</b><br/>Senior Advisor",
+                                "<b>Nikhil Wagle</b><br/>Director",
                                 "<b>Corrie Painter</b><br/>Deputy Director",
-                                "<b>Nikhil Wagle</b><br/>Director"
+                                "<b>Elana Anastasio</b><br/>Associate Director",
+                                "<b>Roeshana Moore-Evans</b><br/>Senior Advisor"
                             ]
                         },
                         {
