--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -206,10 +206,10 @@
                         {
                             "Title": "Liderazgo",
                             "List": [
-                                "<b>Elana Anastasio</b><br/> Directora Asociada",
-                                "<b>Roeshana Moore-Evans</b><br/> Asesora Superior",
+                                "<b>Nikhil Wagle</b><br/> Director",
                                 "<b>Corrie Painter</b><br/> Directora Adjunta",
-                                "<b>Nikhil Wagle</b><br/> Director"
+                                "<b>Elana Anastasio</b><br/> Directora Asociada",
+                                "<b>Roeshana Moore-Evans</b><br/> Asesora Superior"
                             ]
                         },
                         {
