DDP-6816 remove empty participants (#830)
* DDP-6816 remove empty participants

* DDP-6816 fix comments

* DDP-6816 code review fixes, assign labels for children w/o names after removing empty participants

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -505,8 +505,7 @@
             "ShowPanel": "Show",
             "HidePanel": "Hide",
             "UserLabel": "You",
-            "ChildLabel": "Your child",
-            "RemoveParticipant": "Remove participant {{participant}}"
+            "ChildLabel": "Your child{{suffix}}"
         },
         "Password": {
             "Title": "Please enter the password",
