DDP-6897 remove language selector from user preferences edit dialog

--- a/ddp-workspace/projects/basil-app/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/basil-app/src/assets/i18n/fr.json
@@ -50,8 +50,7 @@
         },
         "UserPreferences": {
             "UserPreferencesTitle": "Préférences de l'utilisateur",
-            "UserPreferencesGender": "Sexe",
-            "UserPreferencesLocale": "Langue préférée"
+            "UserPreferencesGender": "Sexe"
         },
         "Dashboard": {
             "Title": "My Study Information"
