--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -510,8 +510,7 @@
         },
         "UserPreferences": {
             "UserPreferencesTitle": "User preferences",
-            "UserPreferencesGender": "Sex",
-            "UserPreferencesLocale": "Preferred language"
+            "UserPreferencesGender": "Sex"
         },
         "Dashboard": {
             "Title": "My Dashboard",
