--- a/ddp-workspace/projects/sandbox-app/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/sandbox-app/src/assets/i18n/ru.json
@@ -50,8 +50,7 @@
         },
         "UserPreferences": {
             "UserPreferencesTitle": "Пользовательские настройки",
-            "UserPreferencesGender": "Пол",
-            "UserPreferencesLocale": "Язык"
+            "UserPreferencesGender": "Пол"
         },
         "Dashboard": {
             "Title": "My Study Information"
