--- a/ddp-workspace/projects/basil-app/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/basil-app/src/assets/i18n/ru.json
@@ -50,28 +50,27 @@
         },
         "UserPreferences": {
             "UserPreferencesTitle": "Пользовательские настройки",
-            "UserPreferencesGender": "Пол",
-            "UserPreferencesLocale": "Язык"
+            "UserPreferencesGender": "Пол"
         },
         "Dashboard": {
             "Title": "My Study Information"
         },
         "DatePicker": {
-          "Day": "Choose day...",
-          "Month": "Choose month...",
-          "Year": "Choose year...",
-          "January": "January",
-          "February": "February",
-          "March": "March",
-          "April": "April",
-          "May": "May",
-          "June": "June",
-          "July": "July",
-          "August": "August",
-          "September": "September",
-          "October": "October",
-          "November": "November",
-          "December": "December"
+            "Day": "Choose day...",
+            "Month": "Choose month...",
+            "Year": "Choose year...",
+            "January": "January",
+            "February": "February",
+            "March": "March",
+            "April": "April",
+            "May": "May",
+            "June": "June",
+            "July": "July",
+            "August": "August",
+            "September": "September",
+            "October": "October",
+            "November": "November",
+            "December": "December"
         },
         "DateLabel": {
             "YYYY": "YYYY",
