--- a/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
@@ -116,8 +116,7 @@
         },
         "UserPreferences": {
             "UserPreferencesTitle": "User preferences",
-            "UserPreferencesGender": "Sex",
-            "UserPreferencesLocale": "Preferred language"
+            "UserPreferencesGender": "Sex"
         },
         "Dashboard": {
             "Title": "Participant Dashboard",
