--- a/ddp-workspace/projects/sandbox-app/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/sandbox-app/src/assets/i18n/en.json
@@ -50,8 +50,7 @@
         },
         "UserPreferences": {
             "UserPreferencesTitle": "User preferences",
-            "UserPreferencesGender": "Sex",
-            "UserPreferencesLocale": "Preferred language"
+            "UserPreferencesGender": "Sex"
         },
         "Dashboard": {
             "Title": "My Study Information"
